fix: Resolve projects' description overlap on smaller screens

--- a/src/components/Projects/styles.scss
+++ b/src/components/Projects/styles.scss
@@ -31,10 +31,10 @@
         }
 
         .meta {
+            position: relative;
             width: 50%;
             height: 100%;
             margin-inline: 20px;
-            position: relative;
         }
 
         .name {
@@ -73,13 +73,14 @@
 /* Mobile */
 @media (max-width: 768px) {
     .projects {
+        padding-bottom: 200px;
         .project {
             position: relative;
-            width: 100%;
-            height: 400px;
+            width: 95%;
+            min-height: 400px;
             flex-direction: column;
             margin: 5px 0;
-            border-radius: 0;
+            border-radius: 3px;
             cursor: pointer;
     
             .img-wrapper {
@@ -116,8 +117,7 @@
         
                 .description {
                     position: absolute;
-                    bottom: 90px;
-                    color: black;
+                    top: 70%;
                 }
         
                 .icons {
